--- a/app/assets/scss/_reset.scss
+++ b/app/assets/scss/_reset.scss
@@ -20,4 +20,7 @@ body {
     max-width: 99%;
     margin: 0 auto;
     padding: 0 10px;
+    @media screen and (max-width: 550px) {
+        padding: 5px;
+    }
 }
