added black theme

--- a/app/assets/scss/_reset.scss
+++ b/app/assets/scss/_reset.scss
@@ -12,7 +12,8 @@ html {
 
 body {
     height: 100%;
-    background: #020618;
+    // background: #020618;
+    background: #000000;
 }
 
 .container {
